--- a/index.html
+++ b/index.html
@@ -1,1 +1,209 @@
-<h1>this is testing luis mendez</h1>
+<html lang="ja">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="test2.css">
+
+</head>
+<body>
+
+	<div class="body">
+		<div class="box1"> 
+		</div>
+
+		<div class="pic1">
+	<img src="images/スクリーンショット2015-05-31 12.53.42.png">
+      </div>
+
+
+
+
+
+<div class="luis1">
+	<ul>
+		<li>レッスン一環
+		<li>プレミアム会員
+		<li>法人でのご利用
+	</ul>
+</div>
+
+<div class="pic2">
+	<img src="images/スクリーンショット 2015-05-31 12.53.36.png">
+</div>
+
+<div class="box2"> 
+		</div>
+
+
+
+<div class="left-box">
+	<div class="left-box2">
+		<span>検索対象</span>
+	</div>
+	<div class="leftbox3">
+		<ul>
+	 		<li>レッスン
+     		<li>ソースコード
+     	</ul>
+ </div>
+</div>
+</div>
+
+
+
+	    <form method="get" action="#" class="search">
+	    	<div>
+	    	<input type="text" name="example" class="textBox">
+	    	<input type="submit" value="検索" class="btn">
+	    </div>
+	</form>
+
+
+	<div class="text1">
+		<text><div class="text-big">25件</div>のレッスンと<div class="text-big">162件</div>のレッスン動画が見つかりました。</text>
+		</div>
+
+
+
+
+<div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+
+<div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+</div><div class="set-1">
+<div class="pic-3">
+<img src="images/スクリーンショット 2015-05-31 12.54.25.png">
+</div>
+
+<div class="set-2">
+<span> 映像その１<span>
+</div>
+<div class="set-3">
+<span>ksssssssssssssssssssssssssssssssssssssssssss<br>ssssssssssssssssssssssssssssssssssssss <span>
+</div>
+</div>
+
+
+
+	</div>
+</body>
+
+</html>
